--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "use-persisted-state",
+  "name": "papercup-use-persisted-state",
   "publishConfig": {
     "tag": "latest"
   },
-  "version": "0.3.3",
+  "version": "0.3.4",
   "description": "A custom React Hook that provides a multi-instance, multi-tab/browser shared and persistent state.",
-  "main": "dist/use-persisted-state.js",
-  "umd:main": "dist/use-persisted-state.umd.js",
-  "module": "dist/use-persisted-state.m.js",
+  "main": "dist/papercup-use-persisted-state.js",
+  "umd:main": "dist/papercup-use-persisted-state.umd.js",
+  "module": "dist/papercup-use-persisted-state.m.js",
   "source": "src/index.js",
   "license": "MIT",
   "repository": {
